--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -5,12 +5,13 @@
    "id": "8130e639",
    "metadata": {},
    "source": [
-    "### 建立變數"
+    "### 建立變數\n",
+    "--- 依靠指定運算子"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d883d174",
    "metadata": {},
    "outputs": [
@@ -27,6 +28,26 @@
     "m = 25 #敘述式\n",
     "total = n + m #敘述式\n",
     "print(\"total=\", total) #敘述式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "38d73db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5+10\n",
+    "y = 20+5\n",
+    "print(x,y)"
    ]
   }
  ],
