--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8130e639",
+   "id": "55f000b1",
    "metadata": {},
    "source": [
-    "### 建立變數\n",
-    "--- 依靠指定運算子"
+    "### 敘述式"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "d883d174",
    "metadata": {},
    "outputs": [
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "38d73db7",
    "metadata": {},
    "outputs": [
@@ -48,6 +47,38 @@
     "x = 5+10\n",
     "y = 20+5\n",
     "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "513d6b13",
+   "metadata": {},
+   "source": [
+    "### 輸入\n",
+    "- input\n",
+    "\n",
+    "### 輸出\n",
+    "- print\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ba1f8c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入的是整數: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "value_str = input(\"請輸入整數:\")\n",
+    "value = int(value_str)\n",
+    "print(\"輸入的是整數:\", value)"
    ]
   }
  ],
