--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -80,6 +80,82 @@
     "value = int(value_str)\n",
     "print(\"輸入的是整數:\", value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cc3bba65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入的是整數: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = int(input(\"請輸入整數:\"))\n",
+    "\n",
+    "print(\"輸入的是整數:\", value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "55bd9951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入的總和: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "value1 = int(input(\"請輸入第一個整數:\"))\n",
+    "value2 = int(input(\"請輸入第2個整數:\"))\n",
+    "total = value1 + value2\n",
+    "print(\"輸入的總和:\", total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9e06c39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "寬: 10\n",
+      "高: 10\n",
+      "面積: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "width = eval (input(\"輸入矩形寬度\"))\n",
+    "height = eval (input(\"輸入矩形高度\"))\n",
+    "area = width * height\n",
+    "print(\"寬:\",width)\n",
+    "print(\"高:\",height)\n",
+    "print(\"面積:\",area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b9c73b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "()"
+   ]
   }
  ],
  "metadata": {
