--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -166,6 +166,36 @@
     "math = 100\n",
     "print (f\"國文 {chinese:.2f},數學 {math}\") #f 是取代上面+ #.2f 是顯示小數點位數 #大括號"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3935176c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "身高(公分): 152\n",
+      "體重(公斤): 42\n",
+      "BMI數值: 18.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "#計算BMI數值\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "height = eval(input('請輸入身高(公分):'))\n",
+    "weight = eval(input('請輸入體重(公斤):'))\n",
+    "bmi = weight / (height/100)**2  \n",
+    "\n",
+    "print (f'身高(公分): {height}')\n",
+    "print (f'體重(公斤): {weight}')\n",
+    "print (f'BMI數值:{bmi: .2f}')"
+   ]
   }
  ],
  "metadata": {
