--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "9e06c39e",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "width = eval (input(\"輸入矩形寬度\"))\n",
+    "width = eval (input(\"輸入矩形寬度\")) # eval 去掉字串,取出純值,整數或是浮點數都可以\n",
     "height = eval (input(\"輸入矩形高度\"))\n",
     "area = width * height\n",
     "print(\"寬:\",width)\n",
