--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b35fcbfa",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,8 @@
     "#字串插補 (字串的格式化)\n",
     "chinese = 92\n",
     "math = 100\n",
-    "print (\"國文\" + str(chinese) + \",數學\" + str(math))"
+    "print (\"國文\" + str(chinese) + \",數學\" + str(math)) #字串 + str(變數)\n",
+    "# str(變數)轉成字串"
    ]
   },
   {
