--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -257,6 +257,32 @@
     "if value <120 or value >220:\n",
     "    print(\"輸入數值小於120或者大於220\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8707bf7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不及格\n"
+     ]
+    }
+   ],
+   "source": [
+    "#成績\n",
+    "\n",
+    "scores:int=int (input(\"輸入成績:\"))\n",
+    "if scores >=80:\n",
+    "    print(\"優\")\n",
+    "elif scores >=60: # else 和 if 整合成elif\n",
+    "    print(\"甲\")\n",
+    "else:\n",
+    "    print(\"不及格\")"
+   ]
   }
  ],
  "metadata": {
