--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "#國中數學\n",
     "import math #導入函式庫\n",
-    "side = eval(input(\"鄰邊\"))\n",
+    "side = eval(input(\"鄰邊\")) #eval 取純值\n",
     "other_side = eval(input(\"對邊\"))\n",
     "result = math.sqrt(side ** 2 + other_side ** 2) #sqrt 是開根方\n",
     "print (\"鄰邊\", side)\n",
