--- a/lesson4/lesson4_功課1.ipynb
+++ b/lesson4/lesson4_功課1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5408135e",
+   "execution_count": 17,
+   "id": "7e6bcc8c",
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,7 @@
      "output_type": "stream",
      "text": [
       "輸入格式錯誤!\n",
-      "應用程式結束~~~\n",
-      "輸入身高(公分): 152 cm\n",
-      "輸入體重(公斤): 42 Kg\n",
-      "BMI計算數值: 18.18\n",
-      "==============================\n",
-      "BMI數值計算完成\n"
+      "應用程式結束~~~\n"
      ]
     }
    ],
@@ -31,8 +26,16 @@
     "   \n",
     "    weight:int = int(input('請輸入體重(公斤):'))\n",
     "    if weight <30 or weight >200:       \n",
-    "        raise Exception(f\"體重輸入:{weight} 超過30Kg ~200Kg 範圍\") #自己建立raise檢查錯誤 \n",
-    "         \n",
+    "        raise Exception(f\"體重輸入:{weight} Kg, 超過30Kg ~200Kg 範圍\") #自己建立raise檢查錯誤 \n",
+    "        \n",
+    "    bmi = weight / (height/100)**2   \n",
+    "\n",
+    "    print (f'輸入身高(公分): {height} cm')\n",
+    "    print (f'輸入體重(公斤): {weight} Kg')\n",
+    "    print (f'BMI計算數值:{bmi: .2f}')\n",
+    "    print (\"=\"*30)\n",
+    "    print (\"BMI數值計算完成\")\n",
+    "\n",
     "except ValueError: #輸入格式錯誤!\n",
     "    print(\"輸入格式錯誤!\")\n",
     "    print(\"應用程式結束~~~\")\n",
@@ -40,15 +43,7 @@
     "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\")\n",
     "    print(e)\n",
     "    print (\"-\"*40)\n",
-    "    print(\"應用程式結束~~~\")\n",
-    "\n",
-    "bmi = weight / (height/100)**2   \n",
-    "\n",
-    "print (f'輸入身高(公分): {height} cm')\n",
-    "print (f'輸入體重(公斤): {weight} Kg')\n",
-    "print (f'BMI計算數值:{bmi: .2f}')\n",
-    "print (\"=\"*30)\n",
-    "print (\"BMI數值計算完成\")\n"
+    "    print(\"應用程式結束~~~\")\n"
    ]
   }
  ],
