EPPY16IT6_Lesson1_r1習作

--- a/2025_05_13自己練習/EPPY16IT6_Lesson1_r1.ipynb
+++ b/2025_05_13自己練習/EPPY16IT6_Lesson1_r1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5e1ae87c",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,10 @@
       "<class 'float'>\n",
       "<class 'tuple'>\n",
       "<class 'tuple'>\n",
-      "test\n"
+      "test\n",
+      "100\n",
+      "124.0\n",
+      "testtesttesttesttesttesttesttesttesttest\n"
      ]
     }
    ],
@@ -68,7 +71,19 @@
     "\n",
     "x=50\n",
     "x=\"test\"\n",
-    "print(x)"
+    "print(x)\n",
+    "\n",
+    "a=10\n",
+    "b=a*10\n",
+    "print(b)\n",
+    "\n",
+    "a=12.4\n",
+    "b=a*10\n",
+    "print(b)\n",
+    "\n",
+    "a=\"test\"\n",
+    "b=a*10\n",
+    "print(b)"
    ]
   }
  ],
