--- a/lesson4/lesson4_功課1.ipynb
+++ b/lesson4/lesson4_功課1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7e6bcc8c",
    "metadata": {},
    "outputs": [
@@ -36,14 +36,21 @@
     "    print (\"=\"*30)\n",
     "    print (\"BMI數值計算完成\")\n",
     "\n",
-    "except ValueError: #輸入格式錯誤!\n",
+    "except ValueError: #輸入格式錯誤! #特定的except #只會執行1個\n",
     "    print(\"輸入格式錯誤!\")\n",
     "    print(\"應用程式結束~~~\")\n",
     "\n",
-    "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\")\n",
+    "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\") #執行所有except\n",
     "    print(e)\n",
     "    print (\"-\"*40)\n",
-    "    print(\"應用程式結束~~~\")\n"
+    "    print(\"應用程式結束~~~\")\n",
+    "\n",
+    "else: #try 區塊沒有except 就執行else區塊\n",
+    "    print (f'輸入身高(公分): {height} cm')\n",
+    "    print (f'輸入體重(公斤): {weight} Kg')\n",
+    "    print (f'BMI計算數值:{bmi: .2f}')\n",
+    "    print (\"=\"*30)\n",
+    "    print (\"BMI數值計算完成\")"
    ]
   }
  ],
