--- a/lesson4/lesson4_功課1.ipynb
+++ b/lesson4/lesson4_功課1.ipynb
@@ -30,11 +30,12 @@
     "        \n",
     "    bmi = weight / (height/100)**2   \n",
     "\n",
-    "    print (f'輸入身高(公分): {height} cm')\n",
+    "   \"\"\" print (f'輸入身高(公分): {height} cm')\n",
     "    print (f'輸入體重(公斤): {weight} Kg')\n",
     "    print (f'BMI計算數值:{bmi: .2f}')\n",
     "    print (\"=\"*30)\n",
     "    print (\"BMI數值計算完成\")\n",
+    "    \"\"\"\n",
     "\n",
     "except ValueError: #輸入格式錯誤! #特定的except #只會執行1個\n",
     "    print(\"輸入格式錯誤!\")\n",
