--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7478cf04",
    "metadata": {},
    "outputs": [
@@ -163,6 +163,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=2\n",
       "j=1\n",
       "j=2\n",
@@ -173,6 +174,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=3\n",
       "j=1\n",
       "j=2\n",
@@ -183,6 +185,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=4\n",
       "j=1\n",
       "j=2\n",
@@ -193,6 +196,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=5\n",
       "j=1\n",
       "j=2\n",
@@ -203,6 +207,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=6\n",
       "j=1\n",
       "j=2\n",
@@ -213,6 +218,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=7\n",
       "j=1\n",
       "j=2\n",
@@ -223,6 +229,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=8\n",
       "j=1\n",
       "j=2\n",
@@ -233,6 +240,7 @@
       "j=7\n",
       "j=8\n",
       "j=9\n",
+      "\n",
       "i=9\n",
       "j=1\n",
       "j=2\n",
@@ -242,7 +250,8 @@
       "j=6\n",
       "j=7\n",
       "j=8\n",
-      "j=9\n"
+      "j=9\n",
+      "\n"
      ]
     }
    ],
@@ -256,8 +265,8 @@
     "    print(f\"i={i}\")\n",
     "\n",
     "    for j in range(1,10):\n",
-    "        print(f\"j={j}\") #預設是end='\\n'是換行列印\n",
-    "        print(f\"j={j}\",end='') #end='空白'是連續列印\n",
+    "        print(f\"j={j}\") #預設是end='\\n'是連續列印\n",
+    "        #print(f\"j={j}\",end='') #end='空白'是換行列印\n",
     "    print() #空一行列印\n",
     "\n",
     "#print(*objects, sep=' ', end='\\n', file=None, flush=False)\n",
@@ -291,9 +300,21 @@
     "#99乘法表\n",
     "for i in range(1,10):\n",
     "    for j in range(1,10):\n",
-    "        print(f\"{i}*{j}={i*j}\",end='\\t') #預設是end='\\t'是tab\n",
+    "        print(f\"{i}*{j}={i*j}\",end='\\t') #end='\\t'是tab\n",
     "        \n",
     "    print() #空一行列印"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2297e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for ... in... : 明確知道執行次數\n",
+    "#while 不明確執行次數\n",
+    "\n"
    ]
   }
  ],
