--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3b27131",
+   "id": "c833e653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,24 +17,26 @@
     "   \n",
     "    weight:int = int(input('請輸入體重(公斤):'))\n",
     "    if weight <30 or weight >200:       \n",
-    "        raise Exception(f\"體重輸入:{weight} 超過30Kg ~200Kg 範圍\") #自己建立raise檢查錯誤 \n",
-    "         \n",
-    "except ValueError: #輸入格式錯誤!\n",
+    "        raise Exception(f\"體重輸入:{weight} Kg, 超過30Kg ~200Kg 範圍\") #自己建立raise檢查錯誤 \n",
+    "        \n",
+    "    bmi = weight / (height/100)**2   \n",
+    "\n",
+    "\n",
+    "except ValueError: #輸入格式錯誤! #特定的except #只會執行1個\n",
     "    print(\"輸入格式錯誤!\")\n",
     "    print(\"應用程式結束~~~\")\n",
     "\n",
-    "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\")\n",
+    "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\") #執行所有except\n",
     "    print(e)\n",
     "    print (\"-\"*40)\n",
     "    print(\"應用程式結束~~~\")\n",
     "\n",
-    "bmi = weight / (height/100)**2   \n",
-    "\n",
-    "print (f'輸入身高(公分): {height} cm')\n",
-    "print (f'輸入體重(公斤): {weight} Kg')\n",
-    "print (f'BMI計算數值:{bmi: .2f}')\n",
-    "print (\"=\"*30)\n",
-    "print (\"BMI數值計算完成\")\n"
+    "else: #try 區塊沒有except 就執行else區塊\n",
+    "    print (f'輸入身高(公分): {height} cm')\n",
+    "    print (f'輸入體重(公斤): {weight} Kg')\n",
+    "    print (f'BMI計算數值:{bmi: .2f}')\n",
+    "    print (\"=\"*30)\n",
+    "    print (\"BMI數值計算完成\")"
    ]
   }
  ],
