--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -10,6 +10,16 @@
     "#計算BMI數值\n",
     "#BMI公式=體重(公斤)/身高(公尺)平方\n",
     "\n",
+    "\"\"\"\n",
+    "BMI < 18.5 體重過輕\n",
+    "18.5 <= BMI < 24 正常範圍\n",
+    "24 <= BMI < 27 過重\n",
+    "27 <= BMI <30 輕度肥胖\n",
+    "30 <= BMI <35 中度肥胖\n",
+    "35 >= BMI 過度肥胖\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "try:\n",
     "    height:int = int(input('請輸入身高(公分):'))\n",
     "    if height < 100 or height >220:  \n",
