--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9ae8d6ae",
    "metadata": {},
    "outputs": [
@@ -71,20 +71,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入身高(公分): 155 cm\n",
-      "輸入體重(公斤): 50 Kg\n",
-      "BMI計算數值: 20.81\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 41\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mBMI計算數值:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbmi\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m .2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     38\u001b[39m \u001b[38;5;66;03m#print (\"=\"*30)\u001b[39;00m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m#print (\"BMI數值計算完成\")\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m     42\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m bmi < \u001b[32m18.5\u001b[39m:\n\u001b[32m     43\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mBMI : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbmi\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m .2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m) \n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "輸入身高(公分): 160 cm\n",
+      "輸入體重(公斤): 52 Kg\n",
+      "BMI計算數值: 20.31\n",
+      "BMI=20.31, 體重過重\n",
+      "\n",
+      "BMI數值計算完成\n",
+      "應用程式結束~~~\n"
      ]
     }
    ],
@@ -133,16 +126,29 @@
     "    if bmi < 18.5:\n",
     "            print(f\"BMI : {bmi: .2f}\") \n",
     "            print(\"BMI < 18.5 , 體重過輕\")\n",
-    "            break\n",
+    "\n",
     "    elif bmi <= 18.5 and bmi < 24 :\n",
-    "            print (f\"BMI={bmi}, 正常範圍\")\n",
-    "            \n",
+    "            print (f\"BMI={bmi:.2f}, 正常範圍\")\n",
+    "\n",
+    "    elif bmi <= 24 and bmi < 27 :\n",
+    "            print (f\"BMI={bmi:.2f}, 體重過重\")\n",
+    "\n",
+    "    elif bmi <= 27 and bmi < 30 :\n",
+    "            print (f\"BMI={bmi:.2f}, 輕度肥胖\")\n",
+    "\n",
+    "    elif bmi <= 30 and bmi < 35 :\n",
+    "            print (f\"BMI={bmi:.2f}, 中度肥胖\")\n",
+    "    \n",
+    "    elif bmi >=35 :\n",
+    "          print (f\"BMI={bmi:.2f}, 重度肥胖\")\n",
+    "\n",
     "       # else:\n",
     "       # print(\"=\"*30)\n",
     "    # print (\"BMI數值計算完成\")\n",
     "\n",
     "\n",
     "print ()\n",
+    "print(\"BMI數值計算完成\")\n",
     "print(\"應用程式結束~~~\")"
    ]
   },
