--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "9ae8d6ae",
    "metadata": {},
    "outputs": [
@@ -71,12 +71,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入身高(公分): 160 cm\n",
-      "輸入體重(公斤): 52 Kg\n",
-      "BMI計算數值: 20.31\n",
-      "BMI=20.31, 體重過重\n",
-      "\n",
+      "輸入身高(公分): 170 cm\n",
+      "輸入體重(公斤): 85 Kg\n",
+      "==============================\n",
       "BMI數值計算完成\n",
+      "\n",
+      "BMI計算數值=29.41, BMI 狀態:中度肥胖\n",
+      "\n",
       "應用程式結束~~~\n"
      ]
     }
@@ -118,37 +119,33 @@
     "    \n",
     "    print (f'輸入身高(公分): {height} cm')\n",
     "    print (f'輸入體重(公斤): {weight} Kg')\n",
-    "    print (f'BMI計算數值:{bmi: .2f}')\n",
-    "    #print (\"=\"*30)\n",
-    "    #print (\"BMI數值計算完成\")\n",
+    "    print (\"=\"*30)\n",
+    "    print (\"BMI數值計算完成\")\n",
+    "    print ()\n",
     "\n",
+    "# BMI 值狀態描述\n",
     "\n",
     "    if bmi < 18.5:\n",
-    "            print(f\"BMI : {bmi: .2f}\") \n",
-    "            print(\"BMI < 18.5 , 體重過輕\")\n",
+    "        print(f\"BMI : {bmi: .2f}\") \n",
+    "        print(\"BMI < 18.5 , 體重過輕\")\n",
     "\n",
     "    elif bmi <= 18.5 and bmi < 24 :\n",
-    "            print (f\"BMI={bmi:.2f}, 正常範圍\")\n",
+    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:正常範圍\")\n",
     "\n",
     "    elif bmi <= 24 and bmi < 27 :\n",
-    "            print (f\"BMI={bmi:.2f}, 體重過重\")\n",
+    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:體重過重\")\n",
     "\n",
     "    elif bmi <= 27 and bmi < 30 :\n",
-    "            print (f\"BMI={bmi:.2f}, 輕度肥胖\")\n",
+    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:輕度肥胖\")\n",
     "\n",
     "    elif bmi <= 30 and bmi < 35 :\n",
-    "            print (f\"BMI={bmi:.2f}, 中度肥胖\")\n",
+    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:中度肥胖\")\n",
     "    \n",
     "    elif bmi >=35 :\n",
-    "          print (f\"BMI={bmi:.2f}, 重度肥胖\")\n",
-    "\n",
-    "       # else:\n",
-    "       # print(\"=\"*30)\n",
-    "    # print (\"BMI數值計算完成\")\n",
+    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:過度肥胖\")\n",
     "\n",
     "\n",
     "print ()\n",
-    "print(\"BMI數值計算完成\")\n",
     "print(\"應用程式結束~~~\")"
    ]
   },
