--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "9ae8d6ae",
    "metadata": {},
    "outputs": [
@@ -71,12 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入身高(公分): 170 cm\n",
-      "輸入體重(公斤): 85 Kg\n",
-      "==============================\n",
-      "BMI數值計算完成\n",
-      "\n",
-      "BMI計算數值=29.41, BMI 狀態:中度肥胖\n",
+      "身高輸入:100 cm, 超出100cm ~220cm 範圍\n",
+      "----------------------------------------\n",
       "\n",
       "應用程式結束~~~\n"
      ]
@@ -98,7 +94,7 @@
     "\n",
     "try:\n",
     "    height:int = int(input('請輸入身高(公分):'))\n",
-    "    if height < 100 or height >220:  \n",
+    "    if height < 101 or height >220:  \n",
     "        raise Exception(f\"身高輸入:{height} cm, 超出100cm ~220cm 範圍\") #自己建立raise檢查錯誤     \n",
     "   \n",
     "    weight:int = int(input('請輸入體重(公斤):'))\n",
@@ -107,12 +103,12 @@
     "    \n",
     "except ValueError: #輸入格式錯誤! #特定的except #只會執行1個\n",
     "    print(\"輸入格式錯誤!\")\n",
-    "    print(\"應用程式結束~~~\")\n",
+    "    #print(\"應用程式結束~~~\")\n",
     "\n",
     "except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\") #執行所有except\n",
     "    print(e)\n",
     "    print (\"-\"*40)\n",
-    "    print(\"應用程式結束~~~\")\n",
+    "    #print(\"應用程式結束~~~\")\n",
     "\n",
     "else: #try 區塊沒有except 就執行else區塊\n",
     "    bmi = weight / (height/100)**2   \n",
