--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "9ae8d6ae",
    "metadata": {},
    "outputs": [
@@ -71,8 +71,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "身高輸入:100 cm, 超出100cm ~220cm 範圍\n",
-      "----------------------------------------\n",
+      "輸入身高(公分): 160 cm\n",
+      "輸入體重(公斤): 80 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "BMI計算數值=31.25\n",
+      "\n",
       "\n",
       "應用程式結束~~~\n"
      ]
@@ -117,6 +121,7 @@
     "    print (f'輸入體重(公斤): {weight} Kg')\n",
     "    print (\"=\"*30)\n",
     "    print (\"BMI數值計算完成\")\n",
+    "    print (f\"BMI計算數值={bmi:.2f}\")\n",
     "    print ()\n",
     "\n",
     "# BMI 值狀態描述\n",
@@ -128,15 +133,15 @@
     "    elif bmi <= 18.5 and bmi < 24 :\n",
     "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:正常範圍\")\n",
     "\n",
-    "    elif bmi <= 24 and bmi < 27 :\n",
-    "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:體重過重\")\n",
+    "    elif  bmi <= 24 and bmi < 27 :\n",
+    "        print (f\"BMI計算數值={bmi:.2f},BMI 狀態:體重過重\")\n",
     "\n",
     "    elif bmi <= 27 and bmi < 30 :\n",
     "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:輕度肥胖\")\n",
     "\n",
     "    elif bmi <= 30 and bmi < 35 :\n",
     "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:中度肥胖\")\n",
-    "    \n",
+    "\n",
     "    elif bmi >=35 :\n",
     "        print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:過度肥胖\")\n",
     "\n",
@@ -148,10 +153,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "300588b0",
+   "id": "49dfeb77",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入身高(公分): 170 cm\n",
+      "輸入體重(公斤): 90 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "****************************************\n",
+      "\n",
+      "應用程式結束~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#計算BMI數值\n",
+    "#BMI公式=體重(公斤)/身高(公尺)平方\n",
+    "\n",
+    "\"\"\"\n",
+    "BMI < 18.5 體重過輕\n",
+    "18.5 <= BMI < 24 正常範圍\n",
+    "24 <= BMI < 27 過重\n",
+    "27 <= BMI <30 輕度肥胖\n",
+    "30 <= BMI <35 中度肥胖\n",
+    "35 >= BMI 過度肥胖\n",
+    "\"\"\"   \n",
+    "\n",
+    "#while loop\n",
+    "\n",
+    "while (True):\n",
+    "    #判斷輸入值與範圍正確性\n",
+    "    try:\n",
+    "        height:int = int(input('請輸入身高(公分):'))\n",
+    "        if height < 101 or height >220:  \n",
+    "            raise Exception(f\"身高輸入:{height} cm, 超出100cm ~220cm 範圍\") #自己建立raise檢查錯誤     \n",
+    "    \n",
+    "        weight:int = int(input('請輸入體重(公斤):'))\n",
+    "        if weight <30 or weight >200:       \n",
+    "            raise Exception(f\"體重輸入:{weight} Kg, 超出30Kg ~200Kg 範圍\") #自己建立raise檢查錯誤 \n",
+    "        \n",
+    "    except ValueError: #輸入格式錯誤! #特定的except #只會執行1個\n",
+    "        print(\"輸入格式錯誤!\")\n",
+    "        #print(\"應用程式結束~~~\")\n",
+    "        #break\n",
+    "\n",
+    "    except Exception as e: #將其他錯誤表示出來 raise Exception(\"輸入超過範圍\") #執行所有except\n",
+    "        print(e)\n",
+    "        print (\"-\"*40)\n",
+    "        #print(\"應用程式結束~~~\")\n",
+    "        #break\n",
+    "\n",
+    "    else: #try 區塊沒有except 就執行else區塊\n",
+    "        bmi = weight / (height/100)**2   \n",
+    "        \n",
+    "        print (f'輸入身高(公分): {height} cm')\n",
+    "        print (f'輸入體重(公斤): {weight} Kg')\n",
+    "        print (\"=\"*30)\n",
+    "        print (\"BMI數值計算完成\")\n",
+    "        print ()\n",
+    "\n",
+    "    # BMI 值狀態描述\n",
+    "\n",
+    "        if bmi < 18.5:\n",
+    "                print(f\"BMI : {bmi: .2f}\") \n",
+    "                print(\"BMI < 18.5 , 體重過輕\")\n",
+    "\n",
+    "        elif bmi <= 18.5 and bmi < 24 :\n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:正常範圍\")\n",
+    "\n",
+    "        elif bmi <= 24 and bmi < 27 :\n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:體重過重\")\n",
+    "\n",
+    "        elif bmi <= 27 and bmi < 30 :\n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:輕度肥胖\")\n",
+    "\n",
+    "        elif bmi <= 30 and bmi < 35 :\n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:中度肥胖\") #有錯誤不執行\n",
+    "            \n",
+    "        elif bmi >=35 :\n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:過度肥胖\")\n",
+    "\n",
+    "    #決定是否繼續或是結束應用程式\n",
+    "    value = input(\"輸入[s] 繼續計算BMI值;輸入[q]離開:\")\n",
+    "    if value == \"s\":\n",
+    "        print(\"*\"*40)\n",
+    "        print()\n",
+    "        continue\n",
+    "    elif value == \"q\":\n",
+    "        break\n",
+    "\n",
+    "print(\"*\"*40)\n",
+    "print ()\n",
+    "print(\"應用程式結束~~~\")"
+   ]
   }
  ],
  "metadata": {
